[package]
name = "bakery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }